--- a/src/components/shared/footer.css
+++ b/src/components/shared/footer.css
@@ -16,6 +16,15 @@
     padding: 2rem;
 }
 
+.rights-section p{
+    font-size: 0.7rem;
+    color: #707070;
+}
+
+.rights-section h4{
+    font-size: 2rem;
+}
+
 .footer-nav{
     display: flex;
     flex-direction: row;
@@ -33,6 +42,9 @@
     color: white;
 }
 
-.link-border{
-    border-right: 1px solid white;
+.vertical-line{
+Float:left;
+ height:50px;
+ width:1px;
+ background-color: lightgray; 
 }
