--- a/src/components/shared/Card.css
+++ b/src/components/shared/Card.css
@@ -2,15 +2,12 @@
   background-color: #202142;
   color: #fff;
   border-radius: 15px;
-  padding: 40px 50px;
-  margin: 20px 0;
-  position: relative;
 }
 
 .card-img-top {
   width: 100%;
   height: 30%;
-  object-fit: cover;
+  object-fit: fill, contain;
 }
 
 .card-body {
@@ -19,7 +16,7 @@
 
 .card h3 {
   font-size: 2.4rem;
-  font-wieght: 600;
-  tet-align: center;
+  font-weight: 600;
+  text-align: center;
   color: hotpink;
 }
