--- a/src/components/shared/Card.css
+++ b/src/components/shared/Card.css
@@ -1,5 +1,5 @@
 .card {
-  background-color: #202142;
+  background-color: #161c1c90;
   color: #fff;
   border-radius: 15px;
 }
@@ -7,7 +7,7 @@
 .card-img-top {
   width: 100%;
   height: 30%;
-  object-fit: fill, contain;
+  object-fit: fill;
 }
 
 .card-body {
@@ -18,5 +18,4 @@
   font-size: 2.4rem;
   font-weight: 600;
   text-align: center;
-  color: hotpink;
 }
