--- a/src/pages/shared/Pages.css
+++ b/src/pages/shared/Pages.css
@@ -8,3 +8,9 @@
   align-items: center;
   scroll-snap-align: start;
 }
+
+.grid-container {
+  background-color: black;
+  width: 100%;
+  z-index: 9;
+}
