--- a/src/pages/gameInfoPages/GameInfo.css
+++ b/src/pages/gameInfoPages/GameInfo.css
@@ -11,5 +11,5 @@
 }
 
 .uncharted.game-info-wrapper .game-info-header {
-  background-image: url(/src/pages/assets/images/uncharted/);
+  background-image: url(/src/pages/assets/images/uncharted/unchartedhero.jpg);
 }
