--- a/src/pages/consolePage/ConsolePage.css
+++ b/src/pages/consolePage/ConsolePage.css
@@ -1,4 +1,4 @@
-.header-img-section{
+.console-header-img{
     background-image: url(/src/pages/assets/images/headerImages/consoles-page-header.jpg);
     height: 50vh;
     background-repeat: no-repeat;
