edit css modal border radius

--- a/src/components/characters/AddCharacterModal.css
+++ b/src/components/characters/AddCharacterModal.css
@@ -14,7 +14,7 @@
 #layout {
   width: 60%;
   padding: 50px;
-  borderradius: 10px;
+  border-radius: 10px;
   background-color: #161c1c;
   color: white;
   position: relative;
