--- a/src/pages/homePage/HomePage.css
+++ b/src/pages/homePage/HomePage.css
@@ -6,6 +6,23 @@
   margin: 0;
   scroll-snap-type: y mandatory;
 }
+.home-page-btn {
+  text-align: center;
+  background-color: #dca307;
+  color: #161c1c;
+  padding: 6px 12px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1em;
+  font-weight: bold;
+  border: none;
+}
+
+.home-page-btn:hover {
+  background: none;
+  border: 2px solid #dca307;
+  color: #dca307;
+}
 
 .header-font-face-ofe {
   font-family: "OurFriendElectric";
