--- a/src/pages/homePage/HomePage.css
+++ b/src/pages/homePage/HomePage.css
@@ -26,27 +26,12 @@
   color: #dca307;
 }
 
-.header-font-face-o {
-  font-family: "OurFriendElectric";
-  font-size: 64px;
-}
-
-@font-face {
-  font-family: "OurFriendElectric";
-  src: local("OurFriendElectric")
-    url("../shared/fonts/our-friend-electric-font/OurFriendElectric-BWr8d.ttf");
-}
-
 .header-font-face-ofe {
-  font-family: "Black Ops One", cursive;
+  font-family: "Our Friend Electric", sans-serif;
   font-size: 64px;
 }
-@import url("https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap");
 
-@font-face {
-  font-family: "Black Ops One", cursive;
-  src: url("https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap");
-}
+@import url("https://fonts.cdnfonts.com/css/our-friend-electric");
 
 .header-home-page {
   background-image: url(/src/pages/assets/images/headerImages/thelastofus4.jpg);
