--- a/src/pages/homePage/HomePage.css
+++ b/src/pages/homePage/HomePage.css
@@ -65,14 +65,13 @@
   justify-content: center;
   align-items: center;
   scroll-snap-align: start;
-  width: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 .game-info {
-  margin: 15px;
+  margin: 1rem;
   border-radius: 15px;
 }
 
