--- a/src/pages/gameInfoPages/GameInfo.css
+++ b/src/pages/gameInfoPages/GameInfo.css
@@ -29,3 +29,17 @@
 .skyrim.game-info-wrapper .game-info-header {
   background-image: url(/src/pages/assets/images/skyrim/skyrimhero.jpg);
 }
+
+.aplaguetale.game-info-image-1 {
+  background-image: url(/src/pages/assets/images/aplaguetale/aplaguetale1.jpg);
+}
+
+.aplaguetale.game-info-image-2 {
+  background-image: url(/src/pages/assets/images/aplaguetale/aplaguetale2.jpg);
+}
+.aplaguetale.game-info-image-3 {
+  background-image: url(/src/pages/assets/images/aplaguetale/aplaguetale3.jpg);
+}
+.aplaguetale.game-info-image-4 {
+  background-image: url(/src/pages/assets/images/aplaguetale/aplaguetale4.jpg);
+}
