--- a/src/pages/gameInfoPages/GameInfo.css
+++ b/src/pages/gameInfoPages/GameInfo.css
@@ -30,16 +30,15 @@
   background-image: url(/src/pages/assets/images/skyrim/skyrimhero.jpg);
 }
 
-.aplaguetale.game-info-image-1 {
+.aplaguetale.game-info-img-1 {
   background-image: url(/src/pages/assets/images/aplaguetale/aplaguetale1.jpg);
 }
-
-.aplaguetale.game-info-image-2 {
+.aplaguetale.game-info-img-2 {
   background-image: url(/src/pages/assets/images/aplaguetale/aplaguetale2.jpg);
 }
-.aplaguetale.game-info-image-3 {
+.aplaguetale.game-info-img-3 {
   background-image: url(/src/pages/assets/images/aplaguetale/aplaguetale3.jpg);
 }
-.aplaguetale.game-info-image-4 {
+.aplaguetale.game-info-img-4 {
   background-image: url(/src/pages/assets/images/aplaguetale/aplaguetale4.jpg);
 }
