edit buttons in character page and modal delete uploadImage.tsx add character by id modal

--- a/src/components/characters/Modal.css
+++ b/src/components/characters/Modal.css
@@ -14,10 +14,12 @@
 #layout {
   width: 60%;
   padding: 50px;
+  max-height: 80vh;
   border-radius: 10px;
   background-color: #161c1c;
   color: white;
   position: relative;
+  overflow-y: scroll;
 }
 
 #modal-close-btn {
